<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="@dimen/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textAllCaps="false"
            android:letterSpacing="0.01"
            android:textColor="@color/black_button"
            android:textSize="@dimen/text"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/padding"
            android:foreground="?attr/selectableItemBackground"
            app:icon = "@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconTint="@color/black_button"
            app:cornerRadius="@dimen/buttonRadius"
            />
        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/media"
            android:textAllCaps="false"
            android:letterSpacing="0.01"
            android:textColor="@color/black_button"
            android:textSize="@dimen/text"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/padding"
            android:foreground="?attr/selectableItemBackground"
            app:icon = "@drawable/ic_media"
            app:iconGravity = "textStart"
            app:iconTint="@color/black_button"
            app:cornerRadius = "@dimen/buttonRadius"/>
        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:letterSpacing="0.01"
            android:textColor="@color/black_button"
            android:textSize="@dimen/text"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/padding"
            android:foreground="?attr/selectableItemBackground"
            app:icon = "@drawable/ic_settings"
            app:iconGravity = "textStart"
            app:iconTint="@color/black_button"
            app:cornerRadius = "@dimen/buttonRadius"/>



    </LinearLayout>

</LinearLayout>